Ingress/healet.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healet-deployment
  annotations:
    kubernetes.io/change-cause: "First Version"
spec:
  minReadySeconds: 5
  replicas: 3
  selector:
    matchLabels:
      app: healetapp
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      name: healet-pod
      labels:
        app: healetapp
    spec:
      containers:
        - name: healetapp
          image: panneercts/healet:v1
          imagePullPolicy: IfNotPresent
          restartPolicy: Always
          ports:
            - name: healetport
              containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: 250m
              memory: 250Mi
            limits:
              cpu: 750m
              memory: 750Mi
          livenessProbe:
            initialDelaySeconds: 3
            periodSeconds: 5
            successThreshold: 3
            failureThreshold: 2
            httpGet:
              path: "/"
              port: 80
          readinessProbe:
            initialDelaySeconds: 3
            periodSeconds: 5
            successThreshold: 3
            failureThreshold: 2
            httpGet:
              path: "/"
              port: 80

---
apiVersion: v1
kind: Service
metadata:
  name: healet-svc
spec:
  type: ClusterIP
  selector:
    app: healetapp
  ports:
    - name: healetsvcport
      port: 80
      targetPort: healetport
      protocol: TCP
