Ingress/preschool.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: preschool-deployment
  annotations:
    kubernetes.io/change-cause: "First Version"
spec:
  minReadySeconds: 5
  replicas: 3
  selector:
    matchLabels:
      app: preschoolapp
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      name: preschool-pod
      labels:
        app: preschoolapp
    spec:
      containers:
        - name: preschoolapp
          image: panneercts/preschool:v1
          imagePullPolicy: IfNotPresent
          restartPolicy: Always
          ports:
            - name: preschoolport
              containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: 250m
              memory: 250Mi
            limits:
              cpu: 750m
              memory: 750Mi
          livenessProbe:
            initialDelaySeconds: 3
            periodSeconds: 5
            successThreshold: 3
            failureThreshold: 2
            httpGet:
              path: "/"
              port: 80
          readinessProbe:
            initialDelaySeconds: 3
            periodSeconds: 5
            successThreshold: 3
            failureThreshold: 2
            httpGet:
              path: "/"
              port: 80

---
apiVersion: v1
kind: Service
metadata:
  name: preschool-svc
spec:
  type: ClusterIP
  selector:
    app: preschoolapp
  ports:
    - name: preschoolsvcport
      port: 80
      targetPort: preschoolport
      protocol: TCP
